# swu-bazel

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  TODO.md  bazel  gazelle_python.yaml
.github/workflows/: bazel.yml
tools/mdfmt/: BUILD.bazel  mdfmt.bzl  mdfmt.py
tools/mdfmt/testdata/: foo.md.unformatted
